bomb event limit and clean-up